src/components/workflow/create/CreateWorkflow.scss
// ============================================================================
// CreateWorkflow.scss - Styling
// ============================================================================

.input-field {
  width: 100%;
  padding: 8px 12px;
  border-radius: 8px;
  border: 1px solid var(--Neutral-500, #737373);
  background: var(--Generic-White, #ffff);
  box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 0.2);
}

.node-block {
  border-radius: 4px;
  display: flex;
  width: 330px;
  height: 40px;
  padding: 8px 12px;
  align-items: center;
  flex-shrink: 0;
}

.node-area {
  color: var(--Primary-700, #102446);
  font-family: Roboto, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px;
}

.label-medium {
  color: var(--Primary-700, #102446);

  font: {
    family: Roboto, sans-serif;
    size: 14px;
    weight: 500;
  }

  line-height: 16px;
}

.label-text {
  color: var(--Neutral-500, #737373);
  font-family: Roboto, sans-serif;
  font-size: 10px;
  font-weight: 400;
  line-height: 14px;
}

// Define a mixin for shared button styles
@mixin button-base {
  display: inline-flex;
  height: 48px;
  padding: 14px 20px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  flex-shrink: 0;
  cursor: pointer;

  border-radius: 22px;
  border: 1px solid var(--primary-500-main, #183567);
  box-shadow: 0 2px 6px 0 rgba(17, 25, 41, 0.2);
}

// Define the primary button variant
.primary-button {
  @include button-base;
  background: var(--primary-500-main, #183567);
  color: var(--Generic-White, #ffff);

  &:hover {
    background: darken(#183567, 5%);
  }
}

// Define the secondary button variant
.secondary-button {
  @include button-base;
  background: var(--Generic-White, #fff);
  color: var(--primary-500-main, #183567);

  &:hover {
    background: rgba(24, 53, 103, 0.05);
  }
}

.transition-block {
  border: 1px solid var(--Neutral-800, #262626);
  background: var(--Primary-100, #d1d7e1);
  display: flex;
  padding: 12px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 8px;
}

.stage-node {
  width: 80px;
  height: 80px;
  flex-shrink: 0;
  aspect-ratio: 1 / 1;
  fill: var(--Neutral-50, #fafafa);
  stroke-width: 1px;
  stroke: var(--Neutral-400, #a3a3a3);
}

.selected {
  background: none !important;
}

